--- a/src/main/resources/fxml/login_page.fxml
+++ b/src/main/resources/fxml/login_page.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -9,61 +8,38 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #ddfaf7;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerLoginPage">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="314.0" prefWidth="711.0" style="-fx-background-color: #ddfaf7;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerLoginPage">
    <children>
-      <ImageView fitHeight="300.0" fitWidth="300.0" layoutX="58.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+      <Button fx:id="loginButton" layoutX="384.0" layoutY="166.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="251.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Login" textAlignment="CENTER" AnchorPane.leftAnchor="384.0" AnchorPane.rightAnchor="76.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Button>
+      <Label layoutX="408.0" layoutY="79.0" prefHeight="37.0" prefWidth="46.0" text="Email" textAlignment="RIGHT">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="383.0" layoutY="116.0" prefHeight="37.0" prefWidth="69.0" text="Password">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="nomeUtenteTextField" layoutX="461.0" layoutY="85.0" prefHeight="25.0" prefWidth="174.0" />
+      <PasswordField fx:id="pswPasswordField" layoutX="462.0" layoutY="122.0" prefHeight="25.0" prefWidth="174.0" />
+      <Button fx:id="registratiButton" layoutX="510.0" layoutY="227.0" mnemonicParsing="false" prefHeight="9.0" prefWidth="105.0" style="-fx-background-color: transparent;" text="Registrati" textAlignment="CENTER" textFill="#f27777">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Button>
+      <CheckBox fx:id="personaleCheckBox" alignment="CENTER_RIGHT" layoutX="594.0" layoutY="14.0" mnemonicParsing="false" text="Amministratore" textAlignment="CENTER" />
+      <ImageView fitHeight="300.0" fitWidth="305.0" layoutX="30.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="381.0">
          <image>
             <Image url="@../img/logo.png" />
          </image>
       </ImageView>
-      <GridPane layoutX="414.0" layoutY="145.0" prefHeight="303.0" prefWidth="344.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="305.44439697265625" minWidth="10.0" prefWidth="108.66668701171875" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="386.0" minWidth="1.22216796875" prefWidth="212.66664632161456" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Login" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets left="125.0" />
-               </GridPane.margin>
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Button>
-            <Label prefHeight="37.0" prefWidth="94.0" text="Nome utente" GridPane.rowIndex="1">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-            <Label prefHeight="37.0" prefWidth="156.0" text="Password" GridPane.rowIndex="2">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-            <TextField fx:id="nomeUtenteTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <PasswordField fx:id="pswPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button fx:id="registratiButton" mnemonicParsing="false" prefHeight="33.0" prefWidth="110.0" style="-fx-background-color: transparent;" text="Registrati" textAlignment="CENTER" textFill="#f27777" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-            </Button>
-            <CheckBox fx:id="personaleCheckBox" alignment="CENTER_RIGHT" mnemonicParsing="false" text="personale" textAlignment="CENTER" GridPane.columnIndex="1">
-               <GridPane.margin>
-                  <Insets left="140.0" top="50.0" />
-               </GridPane.margin>
-            </CheckBox>
-         </children>
-      </GridPane>
+      <Label layoutX="408.0" layoutY="237.0" text="Non hai un account? " />
    </children>
 </AnchorPane>
