--- a/src/main/resources/fxml/carrello.fxml
+++ b/src/main/resources/fxml/carrello.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -37,12 +38,24 @@
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ddfaf7;">
          <children>
-            <ListView fx:id="carrelloListView" layoutX="-1.0" prefHeight="638.0" prefWidth="1035.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
-            <Button fx:id="confermaOrdinaButton" layoutX="1063.0" layoutY="586.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="195.0" style="-fx-background-color: #f27777;" text="Conferma Ordine" />
-            <DatePicker fx:id="datePicker" layoutX="1063.0" layoutY="59.0" prefHeight="25.0" prefWidth="195.0" />
-            <Label layoutX="1063.0" layoutY="35.0" text="Data di consegna" />
-            <Label layoutX="1063.0" layoutY="561.0" text="Costo totale" />
-            <Label fx:id="costoTotaleLabel" layoutX="1148.0" layoutY="561.0" prefHeight="17.0" prefWidth="84.0" text="Label" textAlignment="RIGHT" />
+            <Spinner fx:id="quantitySpinner" editable="true" layoutX="1142.0" layoutY="30.0" prefHeight="25.0" prefWidth="108.0" />
+            <Label layoutX="1060.0" layoutY="33.0" text="QUANTITA'" textFill="#f27777">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <ListView fx:id="carrelloListView" layoutX="-1.0" prefHeight="641.0" prefWidth="1044.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+            <Button fx:id="confermaOrdinaButton" layoutX="1063.0" layoutY="575.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="195.0" style="-fx-background-color: #f27777;" text="Conferma Ordine" />
+            <Label layoutX="1063.0" layoutY="472.0" text="Costo totale" />
+            <Label fx:id="costoTotaleLabel" layoutX="1150.0" layoutY="472.0" prefHeight="17.0" prefWidth="84.0" text="Label" textAlignment="RIGHT" wrapText="true" />
+            <Button fx:id="eliminaButton" layoutX="1060.0" layoutY="68.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="195.0" style="-fx-background-color: #f27777;" text="Elimina" />
+            <Separator layoutX="1058.0" layoutY="123.0" prefWidth="200.0" />
+            <Label layoutX="1065.0" layoutY="498.0" text="Punti spesa" />
+            <Label fx:id="puntiSpesaLabel" layoutX="1150.0" layoutY="498.0" prefHeight="17.0" prefWidth="84.0" text="Label" textAlignment="RIGHT" wrapText="true" />
+            <Separator layoutX="1062.0" layoutY="457.0" prefWidth="200.0" />
+            <Label layoutX="1066.0" layoutY="523.0" text="Saldo punti" />
+            <Label fx:id="saldoPuntiLabel" layoutX="1151.0" layoutY="523.0" prefHeight="17.0" prefWidth="84.0" text="Label" textAlignment="RIGHT" wrapText="true" />
+            <Separator layoutX="1059.0" layoutY="556.0" prefWidth="200.0" />
          </children></AnchorPane>
   </items>
 </SplitPane>
