--- a/src/main/resources/fxml/prodottoBundle.fxml
+++ b/src/main/resources/fxml/prodottoBundle.fxml
@@ -18,9 +18,11 @@
          <font>
             <Font size="13.0" />
          </font></Label>
-      <Label layoutX="365.0" layoutY="53.0" text="Costo:" AnchorPane.rightAnchor="96.0" AnchorPane.topAnchor="53.0" />
-      <Label fx:id="prezzoLabel" layoutX="422.0" layoutY="54.0" text="SOLDI" AnchorPane.rightAnchor="20.0" />
-      <Label layoutX="365.0" layoutY="34.0" prefHeight="17.0" prefWidth="53.0" text="Quantità:" textAlignment="RIGHT" AnchorPane.rightAnchor="77.0" AnchorPane.topAnchor="34.0" />
-      <Label fx:id="quantitaLabel" layoutX="439.0" layoutY="32.0" text="QT" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="32.0" />
+      <Label layoutX="338.0" layoutY="38.0" text="Costo unitario:" AnchorPane.rightAnchor="79.0" AnchorPane.topAnchor="38.0" />
+      <Label fx:id="prezzoLabel" layoutX="440.0" layoutY="39.0" text="SOLDI" AnchorPane.rightAnchor="22.0" />
+      <Label layoutX="365.0" layoutY="17.0" prefHeight="17.0" prefWidth="51.0" text="Quantità:" textAlignment="RIGHT" AnchorPane.rightAnchor="79.0" AnchorPane.topAnchor="17.0" />
+      <Label fx:id="quantitaLabel" layoutX="457.0" layoutY="17.0" text="QT" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="17.0" />
+      <Label layoutX="349.0" layoutY="61.0" text="Costo totale:" />
+      <Label fx:id="prezzoTotaleLabel" layoutX="440.0" layoutY="61.0" text="SOLDI" />
    </children>
 </AnchorPane>
