--- a/src/main/resources/fxml/carrello.fxml
+++ b/src/main/resources/fxml/carrello.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
@@ -11,11 +12,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.18" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerCarrello">
+<SplitPane dividerPositions="0.206" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerCarrello">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="88.0" prefWidth="898.0" style="-fx-background-color: #ddfaf7;">
          <children>
-            <ImageView fx:id="covidMarketImageView" fitHeight="116.0" fitWidth="181.0" layoutX="24.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="24.0" AnchorPane.topAnchor="2.0">
+            <ImageView fx:id="covidMarketImageView" fitHeight="116.0" fitWidth="181.0" layoutX="24.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="2.0">
                <image>
                   <Image url="@../img/logo.png" />
                </image>
@@ -25,37 +26,49 @@
                   <Image url="@../img/carrello.jpg" />
                </image>
             </ImageView>
-            <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="127.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="33.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="1104.0" AnchorPane.topAnchor="81.0">
+            <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="127.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="36.0" AnchorPane.rightAnchor="290.0" AnchorPane.topAnchor="36.0">
                <image>
                   <Image url="@../img/utente.jpg" />
                </image>
             </ImageView>
-            <Label fx:id="usernameLabel" layoutX="174.0" layoutY="111.0" prefHeight="17.0" prefWidth="108.0" text="NOMEUTENTE" textFill="#f27777" AnchorPane.leftAnchor="174.0" AnchorPane.topAnchor="111.0">
+            <Label fx:id="usernameLabel" layoutX="174.0" layoutY="111.0" prefHeight="17.0" prefWidth="108.0" text="NOMEUTENTE" textFill="#f27777" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="51.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
+            <Label layoutX="629.0" layoutY="46.0" text="Ciao, " textFill="#f27777" AnchorPane.leftAnchor="620.0" AnchorPane.topAnchor="51.0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="nomeutenteCombobox" layoutX="241.0" layoutY="24.0" prefWidth="150.0" style="-fx-background-color: trasparent;" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ddfaf7;">
          <children>
-            <Spinner fx:id="quantitySpinner" editable="true" layoutX="1142.0" layoutY="30.0" prefHeight="25.0" prefWidth="108.0" />
-            <Label layoutX="1060.0" layoutY="33.0" text="QUANTITA'" textFill="#f27777">
+            <Spinner fx:id="quantitySpinner" editable="true" layoutX="797.0" layoutY="17.0" prefHeight="14.0" prefWidth="97.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="17.0" />
+            <Label layoutX="714.0" layoutY="21.0" text="QUANTITA'" textFill="#f27777" AnchorPane.rightAnchor="112.66666666666663" AnchorPane.topAnchor="21.0">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <ListView fx:id="carrelloListView" layoutX="-1.0" prefHeight="641.0" prefWidth="1044.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
-            <Button fx:id="confermaOrdinaButton" layoutX="1063.0" layoutY="575.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="195.0" style="-fx-background-color: #f27777;" text="Conferma Ordine" />
-            <Label layoutX="1063.0" layoutY="472.0" text="Costo totale" />
-            <Label fx:id="costoTotaleLabel" layoutX="1150.0" layoutY="472.0" prefHeight="17.0" prefWidth="84.0" text="Label" textAlignment="RIGHT" wrapText="true" />
-            <Button fx:id="eliminaButton" layoutX="1060.0" layoutY="68.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="195.0" style="-fx-background-color: #f27777;" text="Elimina" />
-            <Separator layoutX="1058.0" layoutY="123.0" prefWidth="200.0" />
-            <Label layoutX="1065.0" layoutY="498.0" text="Punti spesa" />
-            <Label fx:id="puntiSpesaLabel" layoutX="1150.0" layoutY="498.0" prefHeight="17.0" prefWidth="84.0" text="Label" textAlignment="RIGHT" wrapText="true" />
-            <Separator layoutX="1062.0" layoutY="457.0" prefWidth="200.0" />
-            <Label layoutX="1066.0" layoutY="523.0" text="Saldo punti" />
-            <Label fx:id="saldoPuntiLabel" layoutX="1151.0" layoutY="523.0" prefHeight="17.0" prefWidth="84.0" text="Label" textAlignment="RIGHT" wrapText="true" />
-            <Separator layoutX="1059.0" layoutY="556.0" prefWidth="200.0" />
+            <ListView fx:id="carrelloListView" layoutX="-1.0" prefHeight="641.0" prefWidth="1044.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="5.0" />
+            <Button fx:id="confermaOrdinaButton" layoutX="709.0" layoutY="417.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="182.0" style="-fx-background-color: #f27777;" text="Conferma Ordine" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="7.0">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Label layoutX="717.0" layoutY="330.0" text="Costo totale" />
+            <Label fx:id="costoTotaleLabel" layoutX="801.0" layoutY="330.0" prefHeight="17.0" prefWidth="84.0" text="Label" textAlignment="RIGHT" wrapText="true" />
+            <Button fx:id="eliminaButton" layoutX="734.0" layoutY="62.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="137.0" style="-fx-background-color: #f27777;" text="Elimina" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="62.0">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Label layoutX="719.0" layoutY="351.0" text="Punti spesa" AnchorPane.leftAnchor="719.0" AnchorPane.topAnchor="351.0" />
+            <Label fx:id="puntiSpesaLabel" layoutX="796.0" layoutY="349.0" prefHeight="17.0" prefWidth="84.0" text="puntispesa" textAlignment="RIGHT" wrapText="true" AnchorPane.topAnchor="351.0" />
+            <Label layoutX="719.0" layoutY="372.0" text="Saldo punti" />
+            <Label fx:id="saldoPuntiLabel" layoutX="799.0" layoutY="372.0" prefHeight="17.0" prefWidth="84.0" text="saldopunti" textAlignment="RIGHT" wrapText="true" />
+            <Separator layoutX="712.0" layoutY="112.0" prefHeight="4.0" prefWidth="180.0" AnchorPane.rightAnchor="8.0" />
+            <Separator layoutX="712.0" layoutY="315.0" prefHeight="4.0" prefWidth="180.0" AnchorPane.rightAnchor="8.0" />
+            <Separator layoutX="702.0" layoutY="402.0" prefHeight="4.0" prefWidth="180.0" AnchorPane.rightAnchor="8.0" />
          </children></AnchorPane>
   </items>
 </SplitPane>
