--- a/src/main/resources/fxml/prodottoCatalogo.fxml
+++ b/src/main/resources/fxml/prodottoCatalogo.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="152.0" prefWidth="495.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="485.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="prodottoImageView" fitHeight="130.0" fitWidth="130.0" layoutX="7.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="7.0" AnchorPane.topAnchor="11.0" />
-      <Separator layoutX="143.0" orientation="VERTICAL" prefHeight="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="143.0" AnchorPane.topAnchor="0.0" />
+      <ImageView fx:id="prodottoImageView" fitHeight="82.0" fitWidth="79.0" layoutX="7.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0" AnchorPane.topAnchor="11.0" />
+      <Separator layoutX="92.0" layoutY="1.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="7.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="92.0" AnchorPane.topAnchor="1.0" />
       <Label fx:id="nomeLabel" layoutX="157.0" layoutY="14.0" prefHeight="17.0" prefWidth="174.0" text="NOMEPRODOTTO">
          <font>
             <Font name="System Bold" size="15.0" />
@@ -18,10 +18,10 @@
          <font>
             <Font size="13.0" />
          </font></Label>
-      <Label layoutX="339.0" layoutY="116.0" text="Prezzo: " />
-      <Label fx:id="prezzoLabel" layoutX="397.0" layoutY="113.0" prefHeight="17.0" prefWidth="53.0" text="SOLDI" textAlignment="RIGHT" />
-      <Label layoutX="457.0" layoutY="113.0" text="€" />
-      <Label layoutX="339.0" layoutY="94.0" prefHeight="17.0" prefWidth="53.0" text="Quantità:" textAlignment="RIGHT" AnchorPane.topAnchor="94.0" />
-      <Label fx:id="quantitaLabel" layoutX="401.0" layoutY="94.0" prefHeight="17.0" prefWidth="65.0" text="QT" textAlignment="RIGHT" AnchorPane.topAnchor="94.0" />
+      <Label layoutX="339.0" layoutY="72.0" text="Prezzo: " />
+      <Label fx:id="prezzoLabel" layoutX="397.0" layoutY="69.0" prefHeight="17.0" prefWidth="53.0" text="SOLDI" textAlignment="RIGHT" />
+      <Label layoutX="457.0" layoutY="69.0" text="€" />
+      <Label layoutX="339.0" layoutY="50.0" prefHeight="17.0" prefWidth="53.0" text="Quantità:" textAlignment="RIGHT" AnchorPane.topAnchor="50.0" />
+      <Label fx:id="quantitaLabel" layoutX="401.0" layoutY="50.0" prefHeight="17.0" prefWidth="65.0" text="QT" textAlignment="RIGHT" AnchorPane.topAnchor="50.0" />
    </children>
 </AnchorPane>
