--- a/src/main/resources/fxml/profilo.fxml
+++ b/src/main/resources/fxml/profilo.fxml
@@ -16,6 +16,11 @@
   <items>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #ddfaf7;">
          <children>
+            <Label text="Ciao, " textFill="#f27777" AnchorPane.leftAnchor="620.0" AnchorPane.topAnchor="51.0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
             <ImageView fx:id="covidMarketImageView" fitHeight="116.0" fitWidth="181.0" layoutX="18.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="4.0" AnchorPane.topAnchor="2.0">
                <image>
                   <Image url="@../img/logo.png" />
@@ -41,12 +46,12 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="nomeutenteLabel" layoutX="651.0" layoutY="62.0" prefHeight="17.0" prefWidth="108.0" text="NOMEUTENTE" textFill="#f27777" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="51.0">
+            <ChoiceBox fx:id="sezioneChoicebox" layoutX="620.0" layoutY="48.0" prefHeight="25.0" prefWidth="137.0" style="-fx-background-color: transparent;" />
+            <Label fx:id="usernameLabel" prefHeight="17.0" prefWidth="90.0" text="sis" textFill="#f27777" wrapText="true" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="51.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="sezioneChoicebox" layoutX="620.0" layoutY="48.0" prefHeight="25.0" prefWidth="137.0" style="-fx-background-color: transparent;" />
          </children>
       </AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="322.0" prefWidth="898.0" style="-fx-background-color: #ddfaf7;">
