implementata schermata tessera, cambiato da Date a LocalDate format data emissione tessera

--- a/src/main/resources/fxml/saldoPunti_tessera.fxml
+++ b/src/main/resources/fxml/saldoPunti_tessera.fxml
@@ -40,7 +40,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="nomeutenteLabel" layoutX="661.0" layoutY="72.0" prefHeight="17.0" prefWidth="108.0" text="NOMEUTENTE" textFill="#f27777" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="51.0">
+            <Label fx:id="usernameLabel" layoutX="661.0" layoutY="72.0" prefHeight="17.0" prefWidth="108.0" text="NOMEUTENTE" textFill="#f27777" AnchorPane.leftAnchor="650.0" AnchorPane.topAnchor="51.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
