--- a/src/main/resources/fxml/utente_home.fxml
+++ b/src/main/resources/fxml/utente_home.fxml
@@ -1,15 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<Pane fx:id="gatePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerUserHome">
+<Pane fx:id="gatePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerUserHome">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="480.0" prefWidth="900.0">
          <children>
-            <Label layoutX="284.0" layoutY="192.0" text="Home" />
+            <SplitPane dividerPositions="0.22544642857142858" layoutX="21.0" layoutY="33.0" prefHeight="410.0" prefWidth="868.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <items>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="629.0" prefWidth="293.0" style="-fx-background-color: #ddfaf7;">
+                     <children>
+                        <Label layoutX="79.0" layoutY="14.0" prefHeight="19.0" prefWidth="42.0" text="FILTRI" textFill="#f27777">
+                           <font>
+                              <Font name="System Bold Italic" size="13.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="filtraButton" layoutX="29.0" layoutY="413.0" mnemonicParsing="false" onAction="#filtraButtonHandler" prefHeight="35.0" prefWidth="142.0" style="-fx-background-color: #f27777;" text="Filtra" AnchorPane.topAnchor="413.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Button>
+                        <Label layoutX="10.0" layoutY="82.0" text="Marca" />
+                        <TextField fx:id="marcaTextField" layoutX="59.0" layoutY="78.0" prefHeight="25.0" prefWidth="125.0" />
+                        <Label layoutX="55.0" layoutY="110.0" text="Caratteristiche" textFill="#f27777">
+                           <font>
+                              <Font name="System Bold Italic" size="13.0" />
+                           </font>
+                        </Label>
+                        <ScrollPane fitToWidth="true" layoutX="15.0" layoutY="147.0" prefHeight="217.0" prefWidth="169.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="140.0">
+                           <content>
+                              <VBox fx:id="caratteristicheVBox" prefHeight="156.0" prefWidth="179.0" spacing="3.0" />
+                           </content>
+                        </ScrollPane>
+                        <ComboBox fx:id="ordinaComboBox" layoutX="58.0" layoutY="366.0" prefHeight="25.0" prefWidth="125.0" AnchorPane.topAnchor="366.0" />
+                        <Label layoutX="10.0" layoutY="369.0" text="Ordine" textFill="#f27777" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="369.0">
+                           <font>
+                              <Font name="System Bold Italic" size="13.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="10.0" layoutY="48.0" text="Reparto" />
+                        <ComboBox fx:id="repartoComboBox" layoutX="59.0" layoutY="44.0" prefHeight="25.0" prefWidth="125.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="470.0" prefWidth="800.0" style="-fx-background-color: #ddfaf7;">
+                     <children>
+                        <ListView fx:id="itemListView" layoutX="-78.0" prefHeight="460.0" prefWidth="486.0" style="-fx-background-color: #ecfbfa;" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="5.0" />
+                        <Spinner fx:id="quantitySpinner" editable="true" layoutX="608.0" layoutY="22.0" prefHeight="25.0" prefWidth="60.0" AnchorPane.rightAnchor="23.33333333333337" AnchorPane.topAnchor="22.0" />
+                        <Label layoutX="507.0" layoutY="73.0" text="Prezzo quantità:" AnchorPane.rightAnchor="99.0" />
+                        <Label fx:id="costoQuantitaLabel" layoutX="624.0" layoutY="73.0" text="Label" textAlignment="RIGHT" AnchorPane.rightAnchor="39.33333333333337" />
+                        <Label layoutX="878.0" layoutY="25.0" text="QUANTITA'" textFill="#f27777" AnchorPane.rightAnchor="105.99999999999999">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="compraButton" layoutX="549.0" layoutY="108.0" mnemonicParsing="false" onAction="#compraButtonHandler" prefHeight="35.0" prefWidth="87.0" style="-fx-background-color: #f27777;" text="Compra" AnchorPane.rightAnchor="55.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
+               </items>
+            </SplitPane>
          </children>
       </AnchorPane>
    </children>
