--- a/src/main/resources/fxml/responsabile_dashboard.fxml
+++ b/src/main/resources/fxml/responsabile_dashboard.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerUserDashboard">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerRespDashboard">
    <children>
       <SplitPane dividerPositions="0.2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #ddfaf7;">
          <items>
@@ -20,22 +20,21 @@
                         <Image url="@../img/logo.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="582.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="701.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../img/utente.jpg" />
                      </image>
                   </ImageView>
-                  <Label fx:id="usernameLabel" layoutX="636.0" layoutY="50.0" prefHeight="17.0" prefWidth="90.0" text="sis" textFill="#f27777" wrapText="true">
+                  <Label fx:id="usernameLabel" layoutX="760.0" layoutY="50.0" text="Ciao, NOMEUTENTE" textFill="#f27777">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <ChoiceBox fx:id="sectionChoiceBox" layoutX="571.0" layoutY="47.0" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: transparent;" />
-                  <ImageView fx:id="carrelloImageView" fitHeight="70.0" fitWidth="70.0" layoutX="803.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" smooth="false">
-                     <image>
-                        <Image url="@../img/carrello.jpg" />
-                     </image>
-                  </ImageView>
+                  <Button fx:id="speseButton" layoutX="556.0" layoutY="42.0" mnemonicParsing="false" onAction="#speseButtonPress" prefHeight="35.0" prefWidth="113.0" style="-fx-background-color: #f27777;" text="Stato spese">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
                </children>
             </AnchorPane>
             <Pane fx:id="gatePane" prefHeight="200.0" prefWidth="200.0" />
