--- a/src/main/resources/fxml/popup_registrazione.fxml
+++ b/src/main/resources/fxml/popup_registrazione.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #ddfaf7;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ControllerRegistrazione">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #ddfaf7;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane layoutX="80.0" layoutY="170.0" prefHeight="313.0" prefWidth="281.0" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="160.0">
          <columnConstraints>
@@ -129,7 +129,7 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <Button fx:id="salvaButton" layoutX="627.0" layoutY="511.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Salva" textAlignment="CENTER">
+      <Button layoutX="744.0" layoutY="513.0" mnemonicParsing="false" onAction="#salvaButtonPress" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #f27777; -fx-background-radius: 10;" text="Salva" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
