--- a/src/main/resources/fxml/homeResponsanili.fxml
+++ b/src/main/resources/fxml/homeResponsanili.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
@@ -28,12 +29,17 @@
                   <Image url="@../img/utente.jpg" />
                </image>
             </ImageView>
-            <Label layoutX="662.0" layoutY="22.0" text="Ciao, NOMEUTENTE" textFill="#f27777" AnchorPane.bottomAnchor="51.66666666666667" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="51.0">
+            <Label fx:id="nomeutenteLabel" layoutX="662.0" layoutY="22.0" text="Ciao, NOMEUTENTE" textFill="#f27777" AnchorPane.bottomAnchor="51.66666666666667" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="51.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
             <Button fx:id="speseButton" layoutX="548.0" layoutY="43.0" mnemonicParsing="false" onAction="#speseButtonHandler" prefHeight="35.0" prefWidth="113.0" style="-fx-background-color: #f27777;" text="Stato spese" AnchorPane.leftAnchor="548.0" AnchorPane.topAnchor="43.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Button layoutX="405.0" layoutY="45.0" mnemonicParsing="false" onAction="#logoutButtonHandler" prefHeight="35.0" prefWidth="113.0" style="-fx-background-color: #f27777;" text="Logout">
                <font>
                   <Font size="14.0" />
                </font>
@@ -74,7 +80,7 @@
                            </font>
                         </Label>
                         <Label layoutX="10.0" layoutY="48.0" text="Reparto" />
-                        <ComboBox fx:id="repartoComboBox1" layoutX="59.0" layoutY="44.0" prefHeight="25.0" prefWidth="125.0" />
+                        <ComboBox fx:id="repartoComboBox" layoutX="59.0" layoutY="44.0" prefHeight="25.0" prefWidth="125.0" />
                      </children>
                   </AnchorPane>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="470.0" prefWidth="800.0" style="-fx-background-color: #ddfaf7;">
@@ -86,16 +92,12 @@
                               <Font name="System Bold" size="13.0" />
                            </font>
                         </Label>
-                        <Button fx:id="modificaButton" layoutX="542.0" layoutY="68.0" mnemonicParsing="false" onAction="#modificaButtonHandler" prefHeight="35.0" prefWidth="151.0" style="-fx-background-color: #f27777;" text="Modifica" AnchorPane.rightAnchor="24.0">
+                        <Button fx:id="inserisciButton" layoutX="517.0" layoutY="74.0" mnemonicParsing="false" onAction="#inserisciButtonHandler" prefHeight="35.0" prefWidth="151.0" style="-fx-background-color: #f27777;" text="Inserisci">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
-                        <Button fx:id="inserisciButton" layoutX="516.0" layoutY="116.0" mnemonicParsing="false" onAction="#inserisciButtonHandler" prefHeight="35.0" prefWidth="151.0" style="-fx-background-color: #f27777;" text="Inserisci">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Button>
+                        <Separator layoutX="508.0" layoutY="59.0" prefWidth="170.0" />
                      </children>
                   </AnchorPane>
                </items>
